FEATURE:    STM32LTDC driver: Support double buffering. This introduces STM32LTDC_USE_DOUBLEBUFFERING.
FIX:        STM32LTDC driver: Fix bug in gdisp_lld_blit_area() which affected blits with source coordinates other than (0, 0).
FIX:        Improve /demos/benchmarks/rectangles.
FIX:        Win32 driver: Fix buffer position calculation in gdisp_lld_blit_area().


*** Release 2.9 ***
FEATURE:	Added config vars GINPUT_TOUCH_CALIBRATION_FONT1 and GINPUT_TOUCH_CALIBRATION_FONT2
FEATURE:	Added config vars GINPUT_TOUCH_CALIBRATION_TITLE and GINPUT_TOUCH_CALIBRATION_ERROR
FIX:		Fixed ensuring the clock is fully started in STM32LTDC based boards
FIX:		Added support for negative baseline_x in fonts
FIX:		Fixed some word wrapping issues
FIX:		Fixed drawing of 3x3 pixel boxes
FIX:		Fixed issue in RTX5/CMSIS2 port which resulted in hanging delays/threads
FEATURE:	Added GFX_COMPAT_V2 to maintain source compatibility with V2.x programs. It is turned on by default.
FEATURE:	Added GFX_COMPAT_OLDCOLORS to allow V2.x Red, Green, Blue color names. It is turned on by default.
CHANGE:		Added GFX_RED, GFX_BLUE, GFX_GREEN etc to replace V2.x Red, Gree, Blue color names
CHANGE:		Added GFXON/GFXOFF to replace V2.x TRUE/FALSE for configuration options.
CHANGE:		Added types gI8, gU8 .. gI32, gU32 to replace V2.x int8_t etc
CHANGE:		Added type gBool           to replace V2.x bool_t,        and values gTrue/gFalse to replace TRUE/FALSE
CHANGE:		Added type gDelay          to replace V2.x delaytime_t    and values gDelayNone/gDelayForever to replace TIME_IMMEDIATE/TIME_INFINITE
CHANGE:		Added type gTicks          to replace V2.x systemticks_t
CHANGE:		Added type gThread         to replace V2.x gfxThreadHandle and macros GFX_THREAD_FUNCTION/STACK to replace DECLARE_THREAD_FUNCTION & DECLARE_THREAD_STACK
CHANGE:		Added type gThreadreturn   to replace V2.x threadreturn_t and pseudo function gfxThreadReturn() to replace THREAD_RETURN()